--- a/templates/404.html
+++ b/templates/404.html
@@ -22,8 +22,32 @@
 	<div id="main" class="wp-block-group ">
 		<!-- wp:group -->
 		<div id="Page content" class="wp-block-group page-content-wrapper">
-			404
-			<!-- wp:post-content /-->
+			<!-- wp:group -->
+			<div class="wp-block-group container mx-auto px-[20px] deskto:px-0">
+				<!-- wp:paragraph -->
+				<p
+					class="section-title desktop:basis-auto desktop:w-[145px] basis-[20%] gap-[15px] uppercase text-right pr-[20px]"
+				>
+					404
+				</p>
+				<!-- /wp:paragraph -->
+				<!-- wp:group -->
+				<div class="wp-block-group uslugi-title">
+					<!-- wp:paragraph -->
+					<p
+						class="uppercase desktop:text-[50px] text-[24px] desktop:leading-[55px] leading-[30px]"
+					>
+						Strona nie została <br />
+						<span
+							class="relative desktop:text-[50px] text-[24px] uppercase italic before:content-[''] before:inline-block desktop:before:mr-[16px] before:mr-[4px] before:bottom-0 before:left-0 desktop:before:w-[90px] before:w-[30px] desktop:before:h-[3px] before:h-[2px] before:bg-black"
+							>znaleziona</span
+						>
+					</p>
+					<!-- /wp:paragraph -->
+				</div>
+				<!-- /wp:group -->
+			</div>
+			<!-- /wp:group -->
 			<!-- wp:template-part {"slug":"front-page/cta"} /-->
 			<!-- wp:template-part {"slug":"front-page/newsletter"} /-->
 			<!-- wp:template-part {"slug":"front-page/footer"} /-->
