--- a/templates/404.html
+++ b/templates/404.html
@@ -23,23 +23,23 @@
 		<!-- wp:group -->
 		<div id="Page content" class="wp-block-group page-content-wrapper">
 			<!-- wp:group -->
-			<div class="wp-block-group container mx-auto px-[20px] deskto:px-0">
+			<div class="wp-block-group container mx-auto px-[20px] deskto:px-0 flex items-center gap-[20px]">
 				<!-- wp:paragraph -->
 				<p
-					class="section-title desktop:basis-auto desktop:w-[145px] basis-[20%] gap-[15px] uppercase text-right pr-[20px]"
+					class="section-title pr-[20px] desktop:basis-auto desktop:w-[145px] basis-[20%] gap-[15px] uppercase text-right text-[90px] font-medium"
 				>
 					404
 				</p>
 				<!-- /wp:paragraph -->
 				<!-- wp:group -->
-				<div class="wp-block-group uslugi-title">
+				<div class="wp-block-group">
 					<!-- wp:paragraph -->
 					<p
 						class="uppercase desktop:text-[50px] text-[24px] desktop:leading-[55px] leading-[30px]"
 					>
 						Strona nie została <br />
 						<span
-							class="relative desktop:text-[50px] text-[24px] uppercase italic before:content-[''] before:inline-block desktop:before:mr-[16px] before:mr-[4px] before:bottom-0 before:left-0 desktop:before:w-[90px] before:w-[30px] desktop:before:h-[3px] before:h-[2px] before:bg-black"
+							class="relative desktop:text-[50px] text-[24px] uppercase before:content-[''] before:inline-block desktop:before:mr-[16px] before:mr-[4px] before:bottom-0 before:left-0 desktop:before:w-[90px] before:w-[30px] desktop:before:h-[3px] before:h-[2px] before:bg-black"
 							>znaleziona</span
 						>
 					</p>
