--- a/templates/404.html
+++ b/templates/404.html
@@ -39,7 +39,7 @@
 					>
 						Strona nie została <br />
 						<span
-							class="relative desktop:text-[50px] text-[24px] uppercase before:content-[''] before:inline-block desktop:before:mr-[16px] before:mr-[4px] before:bottom-0 before:left-0 desktop:before:w-[90px] before:w-[30px] desktop:before:h-[3px] before:h-[2px] before:bg-black"
+							class="relative desktop:text-[50px] text-[24px] uppercase"
 							>znaleziona</span
 						>
 					</p>
