--- a/templates/404.html
+++ b/templates/404.html
@@ -26,7 +26,7 @@
 			<div class="wp-block-group container mx-auto px-[20px] deskto:px-0 flex items-center gap-[20px]">
 				<!-- wp:paragraph -->
 				<p
-					class="section-title pr-[20px] desktop:basis-auto desktop:w-[145px] basis-[20%] gap-[15px] uppercase text-right text-[90px] font-medium"
+					class="section-title uppercase text-right text-[90px] font-medium"
 				>
 					404
 				</p>
@@ -35,7 +35,7 @@
 				<div class="wp-block-group">
 					<!-- wp:paragraph -->
 					<p
-						class="uppercase desktop:text-[50px] text-[24px] desktop:leading-[55px] leading-[30px]"
+						class="uppercase desktop:text-[40px] text-[24px] desktop:leading-[42px] leading-[30px]"
 					>
 						Strona nie została <br />
 						<span
