--- a/assets/editor.css
+++ b/assets/editor.css
@@ -27,6 +27,14 @@ figure div{
         height: 300px!important;
     }
 }
+@media only screen and (min-width: 1024px){
+    .editor-styles-wrapper #filter-layout3-filter-layout3>.filter-entry {
+        height: 210px;
+        position: relative;
+        row-gap: 2px;
+        transition: height .3s ease-out;
+    }
+}
 .ymc-smart-filter-container .filter-layout3 div:nth-child(9),
 .ymc-smart-filter-container .filter-layout3 div:nth-child(10),
 .ymc-smart-filter-container .filter-layout3 div:nth-child(11),
