--- a/assets/editor.css
+++ b/assets/editor.css
@@ -18,14 +18,8 @@ figure div{
 .menu-passive{
     display: none;
 }
-/* filter-layout3-3 filter-layout3-3-filter-layout3 */
-.editor-styles-wrapper #filter-layout3-filter-layout3 > .filter-entry {
-    height:300px!important;
-}
-@media only screen and (min-width: 1024px){
-    .editor-styles-wrapper #filter-layout3-filter-layout3>.filter-entry {
-        height: 300px!important;
-    }
+.editor-styles-wrapper .filter-entry {
+    height: 210px!important;
 }
 @media only screen and (min-width: 1024px){
     .editor-styles-wrapper #filter-layout3-filter-layout3>.filter-entry {
