--- a/templates/page-contact.html
+++ b/templates/page-contact.html
@@ -26,7 +26,7 @@
       <!-- wp:pattern {"slug":"contact-content"} /-->
 
 			<!-- wp:group -->
-			<div class="wp-block-group backgro contact-form-wrapper desktop:flex">
+			<div class="wp-block-group contact-form-wrapper container mx-auto px-[20px] desktop:px-[0px] desktop:flex">
 				<!-- wp:group -->
 				<div class="wp-block-group left-col-map desktop:w-1/2 z-[0]">
 					<!-- wp:wpmapblock/wp-map-block {"map_id":"wpmapblock_cbd28970","map_marker_list":[{"lat":"54.3841225","lng":"18.6071059","title":"PB Górski","content":"","iconType":"default","customIconUrl":"","customIconWidth":25,"customIconHeight":40}]} /-->
