--- a/templates/page-contact.html
+++ b/templates/page-contact.html
@@ -21,7 +21,7 @@
 	<!-- wp:group -->
 	<div id="main" class="wp-block-group ">
 		<!-- wp:group -->
-		<div id="Page content" class="wp-block-group page-content-wrapper" >
+		<div id="Page content" class="wp-block-group page-content-wrapper bg-[#ebeef2]">
       <!-- wp:pattern {"slug":"contact-banner"} /-->
       <!-- wp:pattern {"slug":"contact-content"} /-->
 
