--- a/templates/page-contact.html
+++ b/templates/page-contact.html
@@ -21,26 +21,30 @@
 	<!-- wp:group -->
 	<div id="main" class="wp-block-group ">
 		<!-- wp:group -->
-		<div id="Page content" class="wp-block-group page-content-wrapper bg-[#ebeef2]">
+		<div id="Page content" class="wp-block-group page-content-wrapper">
       <!-- wp:pattern {"slug":"contact-banner"} /-->
       <!-- wp:pattern {"slug":"contact-content"} /-->
 
 			<!-- wp:group -->
-			<div class="wp-block-group contact-form-wrapper container mx-auto px-[20px] desktop:px-[0px] desktop:flex">
+			<div class="wp-block-group bg-[#ebeef2]">
 				<!-- wp:group -->
-				<div class="wp-block-group left-col-map desktop:w-1/2 z-[0]">
-					<!-- wp:wpmapblock/wp-map-block {"map_id":"wpmapblock_cbd28970","map_marker_list":[{"lat":"54.3841225","lng":"18.6071059","title":"PB Górski","content":"","iconType":"default","customIconUrl":"","customIconWidth":25,"customIconHeight":40}]} /-->
-				</div>
-				<!-- /wp:group -->
+				<div class="wp-block-group contact-form-wrapper container mx-auto px-[20px] desktop:px-[0px] desktop:flex">
+					<!-- wp:group -->
+					<div class="wp-block-group left-col-map desktop:w-1/2 z-[0]">
+						<!-- wp:wpmapblock/wp-map-block {"map_id":"wpmapblock_cbd28970","map_marker_list":[{"lat":"54.3841225","lng":"18.6071059","title":"PB Górski","content":"","iconType":"default","customIconUrl":"","customIconWidth":25,"customIconHeight":40}]} /-->
+					</div>
+					<!-- /wp:group -->
 
-				<!-- wp:group -->
-				<div class="wp-block-group left-col-form p-[40px_20px] desktop:p-[90px_70px] desktop:w-1/2 bg-[#ebeef2]">
-					<!-- wp:contact-form-7/contact-form-selector {"id":65,"hash":"3358ba5","title":"test"} -->
-					<!-- wp:heading {"level":4} -->
-					<h4 class="wp-block-heading text-[30px] text-textGray mb-[30px] font-bold">Formularz kontaktowy</h4>
-					<!-- /wp:heading -->
-					<div class="wp-block-contact-form-7-contact-form-selector">[contact-form-7 id="3358ba5" title="test"]</div>
-					<!-- /wp:contact-form-7/contact-form-selector -->
+					<!-- wp:group -->
+					<div class="wp-block-group left-col-form p-[40px_20px] desktop:p-[90px_70px] desktop:w-1/2 bg-[#ebeef2]">
+						<!-- wp:contact-form-7/contact-form-selector {"id":65,"hash":"3358ba5","title":"test"} -->
+						<!-- wp:heading {"level":4} -->
+						<h4 class="wp-block-heading text-[30px] text-textGray mb-[30px] font-bold">Formularz kontaktowy</h4>
+						<!-- /wp:heading -->
+						<div class="wp-block-contact-form-7-contact-form-selector">[contact-form-7 id="3358ba5" title="test"]</div>
+						<!-- /wp:contact-form-7/contact-form-selector -->
+					</div>
+					<!-- /wp:group -->
 				</div>
 				<!-- /wp:group -->
 			</div>
