--- a/templates/single-mieszkania.html
+++ b/templates/single-mieszkania.html
@@ -161,14 +161,14 @@
 								<p class="text-[18pxpx] mb-[20px] text-primaryRed"><a href="/kredyty"> Zapytaj o kredyt</a></p>
 								<!-- /wp:paragraph -->
 								<!-- wp:group -->
-								<div class="wp-block-group group btn-find-more relative mb-[15px] bg-[#3d4b66] text-white w-full desktop:w-[230px] h-[55px] flex items-center justify-center border-b-[black] before:content-[''] before:inline-block before:absolute before:bottom-0 before:left-0 before:w-full before:min-h-[0%] hover:before:min-h-[100%] before:bg-[#2e384d] before:transition-height before:duration-300 before:ease cursor-pointer">
+								<div class="wp-block-group group btn-find-more relative mb-[15px] bg-[#3d4b66] text-white w-full desktop:w-[230px] h-[55px] flex items-center justify-center border-b-[2px] border-b-[#2e384d] before:content-[''] before:inline-block before:absolute before:bottom-0 before:left-0 before:w-full before:min-h-[0%] hover:before:min-h-[100%] before:bg-[#2e384d] before:transition-height before:duration-300 before:ease cursor-pointer">
 									<!-- wp:paragraph -->
 									<p class="font-bold z-[1]"><a href="#cta2">Zapytaj o mieszkanie</a></p>
 									<!-- /wp:paragraph -->
 								</div>
 								<!-- /wp:group -->
 								<!-- wp:group -->
-								<div class="wp-block-group btn-download-mieszkanie group mb-[20px] btn-download relative bg-[#f5f7fa] text-textGray font-bold w-full desktop:w-[230px] h-[55px] flex items-center justify-center border-b-[#cecece] before:content-[''] before:inline-block before:absolute before:bottom-0 before:left-0 before:w-full before:min-h-[0%] hover:before:min-h-[100%] before:bg-[#e9ecf2] before:transition-height before:duration-300 before:ease cursor-pointer">
+								<div class="wp-block-group btn-download-mieszkanie group mb-[20px] btn-download relative bg-[#f5f7fa] text-textGray font-bold w-full desktop:w-[230px] h-[55px] flex items-center justify-center border-b-[2px] border-b-[#cecece] before:content-[''] before:inline-block before:absolute before:bottom-0 before:left-0 before:w-full before:min-h-[0%] hover:before:min-h-[100%] before:bg-[#e9ecf2] before:transition-height before:duration-300 before:ease cursor-pointer">
 								<!-- wp:shortcode -->
 								[pdf_attachment file="1" name=" Pobierz kartę lokalu"]
 								<!-- /wp:shortcode -->
