--- a/templates/page-blog.html
+++ b/templates/page-blog.html
@@ -65,11 +65,15 @@
 					<!-- /wp:group -->
 					<!-- /wp:post-template -->
 
-					<!-- wp:query-pagination -->
-					<!-- wp:query-pagination-previous {"label":"Poprzednie"} /-->
-					<!-- wp:query-pagination-numbers /-->
-					<!-- wp:query-pagination-next {"label":"Następne"} /-->
-					<!-- /wp:query-pagination -->
+					<!-- wp:group -->
+					<div class="wp-block-group mx-auto">
+						<!-- wp:query-pagination -->
+						<!-- wp:query-pagination-previous {"label":"Poprzednie"} /-->
+						<!-- wp:query-pagination-numbers /-->
+						<!-- wp:query-pagination-next {"label":"Następne"} /-->
+						<!-- /wp:query-pagination -->
+					</div>
+					<!-- /wp:group -->
 
 				<!-- /wp:query -->
 			</div>
