--- a/templates/page-blog.html
+++ b/templates/page-blog.html
@@ -66,10 +66,10 @@
 					<!-- /wp:post-template -->
 
 					<!-- wp:group -->
-					<div class="wp-block-group mx-auto">
+					<div class="wp-block-group flex items-center justify-center">
 						<!-- wp:query-pagination -->
 						<!-- wp:query-pagination-previous {"label":"Poprzednie"} /-->
-						<!-- wp:query-pagination-numbers /-->
+						<!-- wp:query-pagination-numbers {"className":"flex gap-[30px]"} /-->
 						<!-- wp:query-pagination-next {"label":"Następne"} /-->
 						<!-- /wp:query-pagination -->
 					</div>
