--- a/assets/custom-styles.css
+++ b/assets/custom-styles.css
@@ -1185,6 +1185,14 @@ background-color: #e8fbff!important;
 .page-numbers:hover{
   color: #95002E;
 }
+.wp-block-query-pagination-next,
+.wp-block-query-pagination-previous{
+  color:#8a8f99;
+}
+.wp-block-query-pagination-next:hover,
+.wp-block-query-pagination-previous:hover{
+  color:#95002E;
+}
 
 
 
