--- a/templates/page-inwestycje-zrealizowane.html
+++ b/templates/page-inwestycje-zrealizowane.html
@@ -58,11 +58,15 @@
 
 					<!-- /wp:post-template -->
 
-					<!-- wp:query-pagination -->
-					<!-- wp:query-pagination-previous {"label":"Poprzednie"} /-->
-					<!-- wp:query-pagination-numbers /-->
-					<!-- wp:query-pagination-next {"label":"Następne"} /-->
-					<!-- /wp:query-pagination -->
+					<!-- wp:group -->
+					<div class="wp-block-group flex items-center justify-center">
+						<!-- wp:query-pagination -->
+						<!-- wp:query-pagination-previous {"label":"Poprzednie"} /-->
+						<!-- wp:query-pagination-numbers {"className":"flex gap-[30px]"} /-->
+						<!-- wp:query-pagination-next {"label":"Następne"} /-->
+						<!-- /wp:query-pagination -->
+					</div>
+					<!-- /wp:group -->
 
 				<!-- /wp:query -->
 			</div>
