--- a/templates/page-inwestycje-zrealizowane.html
+++ b/templates/page-inwestycje-zrealizowane.html
@@ -26,7 +26,7 @@
 			<!-- /wp:group -->
 
 			<!-- wp:group -->
-			<div class="wp-block-group container mx-auto desktop:px-0 px-[20px] [&>ul]:flex [&>ul]:flex-wrap [&>ul]:gap-[20px] [&>ul>li]:w-[370px]">
+			<div class="wp-block-group container mx-auto desktop:px-0 px-[20px] [&>ul]:flex [&>ul]:flex-wrap [&>ul]:gap-[20px] [&>ul>li]:w-[370px] [&>ul>li]:wide:w-[420px]">
 				<!-- wp:query {"query":{"perPage":9,"pages":0,"offset":0,"postType":"inwest-zrealizowane"},"isLink":true} -->
 					<!-- wp:post-template -->
 					<!-- wp:group -->
