--- a/assets/custom-styles.css
+++ b/assets/custom-styles.css
@@ -615,8 +615,12 @@ label{
   .ymc-smart-filter-container .filter-layout3 div.dropdown-filter:nth-child(12) {
     margin-right: 0!important;
   }
+  /* termin: */
   .ymc-smart-filter-container .filter-layout3 div.dropdown-filter:nth-child(13) {
     border-right: 2px solid #ebeef2;
+  }
+  .ymc-smart-filter-container .filter-layout3 div.dropdown-filter:nth-child(13) > p {
+    padding-bottom: 0px!important;
   }
   .ymc-smart-filter-container .filter-layout3 div.dropdown-filter:nth-child(14) {
     border-right: 2px solid white;
