--- a/assets/custom-styles.css
+++ b/assets/custom-styles.css
@@ -1461,7 +1461,7 @@ background-color: #e8fbff!important;
 .tab_mieszkania:hover{
   border-bottom: #b22944 3px solid;
 }
-.tab_mieszkania.tab-active{
+.tab_mieszkania.search_tab-active{
   color:#2E384D;
   border-bottom: #b22944 3px solid;
 }
