--- a/templates/archive-mieszkania.html
+++ b/templates/archive-mieszkania.html
@@ -23,7 +23,7 @@
 		<!-- wp:group -->
 		<div id="Page content" class="wp-block-group page-content-wrapper" >
 			<!-- wp:pattern {"slug":"lista-mieszkan-banner"} /-->
-			<!-- wp:pattern {"slug":"archive-lokale"} /-->
+			<!-- wp:pattern {"slug":"archive-mieszkania"} /-->
 			
 			<!-- wp:template-part {"slug":"front-page/cta"} /-->
 			<!-- wp:template-part {"slug":"front-page/newsletter"} /-->
