--- a/assets/custom-styles.css
+++ b/assets/custom-styles.css
@@ -452,7 +452,8 @@ label{
 }
 .filter-custom-layout-148-2,
 .filter-custom-layout-148-3,
-.filter-custom-layout-148-4{
+.filter-custom-layout-148-4,
+.filter-custom-layout-2323-1{
   background-color: #ebeef2!important;
 }
 .ymc-smart-filter-container .filter-layout3 div{
