--- a/assets/custom-styles.css
+++ b/assets/custom-styles.css
@@ -60,7 +60,8 @@ h4 {
   color:#8a8f99;
   text-decoration: underline;
 }
-.single.single-mieszkania a{
+.single.single-mieszkania a,
+.single.single-lokale a{
   text-decoration: none!important;
 }
 /* images */
@@ -83,7 +84,8 @@ figure[class*="wp-block-image"] img,
   height: 20px;
   margin: 0;
 }
-.single-mieszkania .wp-block-post-featured-image{
+.single-mieszkania .wp-block-post-featured-image,
+.single-lokale .wp-block-post-featured-image{
   width: 100%;
   height: 100%;
   position: absolute;
@@ -91,7 +93,8 @@ figure[class*="wp-block-image"] img,
   left: 0;
   z-index: -1;
 }
-.single-mieszkania .wp-block-post-featured-image img{
+.single-mieszkania .wp-block-post-featured-image img,
+.single-lokale .wp-block-post-featured-image img{
   height: 100%;
 }
 .wp-block-post-featured-image img {
@@ -99,7 +102,8 @@ figure[class*="wp-block-image"] img,
   margin-left: auto;
   margin-right: auto;
 }
-.single-mieszkania .wp-block-post-featured-image img {
+.single-mieszkania .wp-block-post-featured-image img,
+.single-lokale .wp-block-post-featured-image img {
   width: 100%;
   margin-left: auto;
   margin-right: auto;
@@ -406,7 +410,8 @@ input::placeholder{
 .page-template-page-contact textarea{
   height: 200px;
 }
-.single-mieszkania textarea{
+.single-mieszkania textarea,
+.single-lokale textarea{
   height: 235px;
 }
 input:focus,
