--- a/assets/custom-styles.css
+++ b/assets/custom-styles.css
@@ -1087,7 +1087,8 @@ background-color: #e8fbff!important;
   justify-content: center;
   align-items: center;
 }
-.single-mieszkania .entry-content a{
+.single-mieszkania .entry-content a,
+.single-lokale .entry-content a{
   position: absolute!important;
   top: 230px;
   right: -270px;
@@ -1104,7 +1105,8 @@ background-color: #e8fbff!important;
   z-index: 1;
 }
 @media only screen and (max-width: 480px) {
-  .single-mieszkania .entry-content a{
+  .single-mieszkania .entry-content a,
+  .single-lokale .entry-content a{
     position: relative!important;
     top: 230px;
     right: auto;
@@ -1123,7 +1125,8 @@ background-color: #e8fbff!important;
 }
 
 
-.single-mieszkania .entry-content .btn-download a::before{
+.single-mieszkania .entry-content .btn-download a::before,
+.single-lokale .entry-content .btn-download a::before{
   content: '';
   display: inline-block;
   position: absolute;
@@ -1135,10 +1138,12 @@ background-color: #e8fbff!important;
   transition: min-height 0.3s ease;
   z-index: -1;
 }
-.single-mieszkania .entry-content a:hover::before{
+.single-mieszkania .entry-content a:hover::before,
+.single-lokale .entry-content a:hover::before{
   min-height: 100%;
 }
-.single-mieszkania .entry-content a::before{
+.single-mieszkania .entry-content a::before,
+.single-lokale .entry-content a::before{
   content: '';
   display: inline-block;
   position: absolute;
