--- a/templates/page-blog.html
+++ b/templates/page-blog.html
@@ -28,7 +28,7 @@
 				<!-- wp:query {"query":{"perPage":5,"pages":0,"offset":0,"postType":"post"},"isLink":true} -->
 					<!-- wp:post-template -->
 					<!-- wp:group {"isLink":true} -->
-					<div class="wp-block-group blog-tile max-w-full h-fit mb-[80px]">
+					<div class="wp-block-group aos-fade-right blog-tile max-w-full h-fit mb-[80px]">
 						<!-- wp:group -->
 						<div class="wp-block-group relative group inline-block h-full desktop:max-w-full max-w-full" >
 							<!-- wp:group -->
