--- a/templates/single-mieszkania.html
+++ b/templates/single-mieszkania.html
@@ -260,6 +260,7 @@
 			<!-- /wp:group -->
 				
 
+			<!-- wp:template-part {"slug":"front-page/cta"} /-->
 			<!-- wp:template-part {"slug":"front-page/newsletter"} /-->
 			<!-- wp:template-part {"slug":"front-page/footer"} /-->
 		</div>
