--- a/templates/single-lokale.html
+++ b/templates/single-lokale.html
@@ -259,7 +259,7 @@
 			</div>
 			<!-- /wp:group -->
 				
-
+			<!-- wp:template-part {"slug":"front-page/cta"} /-->
 			<!-- wp:template-part {"slug":"front-page/newsletter"} /-->
 			<!-- wp:template-part {"slug":"front-page/footer"} /-->
 		</div>
