--- a/assets/custom-styles.css
+++ b/assets/custom-styles.css
@@ -1212,6 +1212,10 @@ background-color: #e8fbff!important;
 .wp-block-query-pagination-previous:hover{
   color:#95002E;
 }
+/* no category */
+/* .cat-item-1{
+  display: none;
+} */
 
 
 
