--- a/templates/archive-miejsca-postojowe.html
+++ b/templates/archive-miejsca-postojowe.html
@@ -22,7 +22,7 @@
 	<div id="main" class="wp-block-group ">
 		<!-- wp:group -->
 		<div id="Page content" class="wp-block-group page-content-wrapper" >
-			<!-- wp:pattern {"slug":"lista-lokali-banner"} /-->
+			<!-- wp:pattern {"slug":"lista-miejsca-postojowe-banner"} /-->
 			<!-- wp:pattern {"slug":"archive-miejsca-postojowe"} /-->
 			
 			<!-- wp:template-part {"slug":"front-page/cta"} /-->
