--- a/templates/page-lista-miejsca-postojowe.html
+++ b/templates/page-lista-miejsca-postojowe.html
@@ -17,6 +17,7 @@
 		<!-- wp:group -->
 		<div id="Page content" class="wp-block-group page-content-wrapper" >
       <!-- wp:pattern {"slug":"lista-miejsca-postojowe-banner"} /-->
+			<!-- wp:post-content /-->
       <!-- wp:pattern {"slug":"lista-miejsca-postojowe-content"} /-->
 			<!-- wp:template-part {"slug":"front-page/cta"} /-->
 			<!-- wp:template-part {"slug":"front-page/newsletter"} /-->
