--- a/templates/page-lista-miejsca-postojowe.html
+++ b/templates/page-lista-miejsca-postojowe.html
@@ -17,8 +17,13 @@
 		<!-- wp:group -->
 		<div id="Page content" class="wp-block-group page-content-wrapper" >
       <!-- wp:pattern {"slug":"lista-miejsca-postojowe-banner"} /-->
+			
+			<!-- wp:group -->
+			<div class="wp-block-group container mx-auto desktop:px-0 px-[20px]">
 			<!-- wp:post-content /-->
-      <!-- wp:pattern {"slug":"lista-miejsca-postojowe-content"} /-->
+			</div>
+			<!-- /wp:group -->
+
 			<!-- wp:template-part {"slug":"front-page/cta"} /-->
 			<!-- wp:template-part {"slug":"front-page/newsletter"} /-->
 			<!-- wp:template-part {"slug":"front-page/footer"} /-->
