--- a/templates/page-lista-miejsca-postojowe.html
+++ b/templates/page-lista-miejsca-postojowe.html
@@ -1,15 +1,5 @@
 <!-- wp:group -->
 <div id="PB Górski theme" class="wp-block-group overflow-x-hidden">
-	<!-- wp:list -->
-	<ul class="hidden aos-init">
-		<!-- wp:list-item -->
-		<li>
-			test
-		</li>
-		<!-- /wp:list-item -->
-	</ul>
-	<!-- /wp:list -->
-
 	<!-- wp:template-part {"slug":"front-page/header-white"} /-->
 
 	<!-- wp:group -->
@@ -17,9 +7,9 @@
 		<!-- wp:group -->
 		<div id="Page content" class="wp-block-group page-content-wrapper" >
       <!-- wp:pattern {"slug":"lista-miejsca-postojowe-banner"} /-->
-			
+
 			<!-- wp:group -->
-			<div class="wp-block-group container mx-auto desktop:px-0 px-[20px]">
+			<div class="wp-block-group container mx-auto desktop:px-0 px-[20px] py-[80px]">
 			<!-- wp:post-content /-->
 			</div>
 			<!-- /wp:group -->
