--- a/assets/custom-styles.css
+++ b/assets/custom-styles.css
@@ -913,7 +913,8 @@ border-width: 0 2px 2px 0;
 /* wiezycka folwark */
 .page-id-1717 #ymc-smart-filter-container-7 > div.container-posts.container-post-custom-layout,
 .page-id-1727 #ymc-smart-filter-container-7 > div.container-posts.container-post-custom-layout,
-.page-id-1846 #ymc-smart-filter-container-7 > div.container-posts.container-post-custom-layout
+.page-id-1846 #ymc-smart-filter-container-7 > div.container-posts.container-post-custom-layout,
+.page-id-1833 #ymc-smart-filter-container-7 > div.container-posts.container-post-custom-layout
 {
   display: none;
 }
