--- a/templates/page-lista-miejsca-postojowe.html
+++ b/templates/page-lista-miejsca-postojowe.html
@@ -11,6 +11,19 @@
 			<!-- wp:group -->
 			<div class="wp-block-group container mx-auto desktop:px-0 px-[20px] py-[80px]">
 			<!-- wp:post-content /-->
+
+			<!-- wp:query {"query":{"perPage":-1,"pages":0,"offset":0,"postType":"miejsca-postojowe"},"isLink":true} -->
+				<!-- wp:post-template -->
+					<!-- wp:group {"isLink":false} -->
+					<div class="wp-block-group aos-fade-right post-template">
+						<!-- wp:post-title {"isLink":true, "level":3} /-->
+						<!-- wp:post-terms {"term":"inwestycja"} /-->
+					</div>
+					<!-- /wp:group -->
+				<!-- /wp:post-template -->
+			<!-- /wp:query -->
+			</div>
+			<!-- /wp:group -->
 			</div>
 			<!-- /wp:group -->
 
