--- a/templates/page-lista-miejsca-postojowe.html
+++ b/templates/page-lista-miejsca-postojowe.html
@@ -17,7 +17,7 @@
 					<!-- wp:group {"isLink":false} -->
 					<div class="wp-block-group aos-fade-right post-template">
 						<!-- wp:post-title {"isLink":true, "level":3} /-->
-						<!-- wp:post-terms {"term":"inwestycja"} /-->
+						<!-- wp:post-terms /-->
 					</div>
 					<!-- /wp:group -->
 				<!-- /wp:post-template -->
