--- a/templates/page-lista-miejsca-postojowe.html
+++ b/templates/page-lista-miejsca-postojowe.html
@@ -16,8 +16,9 @@
 				<!-- wp:post-template -->
 					<!-- wp:group {"isLink":false} -->
 					<div class="wp-block-group aos-fade-right post-template">
-						<!-- wp:post-title {"isLink":true, "level":3} /-->
-						<!-- wp:post-terms /-->
+						<!-- wp:post-terms {"term":"miasto"} /-->
+						<!-- wp:post-terms {"term":"inwestycja"} /-->
+						<!-- wp:post-terms {"term":"cena"} /-->
 					</div>
 					<!-- /wp:group -->
 				<!-- /wp:post-template -->
