--- a/templates/page-lista-miejsca-postojowe.html
+++ b/templates/page-lista-miejsca-postojowe.html
@@ -15,10 +15,14 @@
 			<!-- wp:query {"query":{"perPage":0,"pages":0,"offset":0,"postType":"miejsca-postojowe"},"isLink":true} -->
 				<!-- wp:post-template -->
 					<!-- wp:group {"isLink":false} -->
-					<div class="wp-block-group aos-fade-right post-template">
-						<!-- wp:post-terms {"term":"miasto"} /-->
-						<!-- wp:post-terms {"term":"inwestycja"} /-->
-						<!-- wp:post-terms {"term":"cena"} /-->
+					<div class="wp-block-group aos-fade-right post-template post-item">
+						<!-- wp:group -->
+						<div class="wp-block-group list-item-mieszkanie group container mx-auto w-full py-[20px] text-[16px] text-textGray flex justify-between items-center"> 
+							<!-- wp:post-terms {"term":"miasto"} /-->
+							<!-- wp:post-terms {"term":"inwestycja"} /-->
+							<!-- wp:post-terms {"term":"cena"} /-->
+						</div>
+						<!-- /wp:group -->
 					</div>
 					<!-- /wp:group -->
 				<!-- /wp:post-template -->
