--- a/templates/page-lista-miejsca-postojowe.html
+++ b/templates/page-lista-miejsca-postojowe.html
@@ -12,6 +12,13 @@
 			<div class="wp-block-group container mx-auto desktop:px-0 px-[20px] py-[80px]">
 			<!-- wp:post-content /-->
 
+			<ul class="wp-block-list js-injected container mx-auto all-taxonomy-list desktop:w-full w-[1054px] px-[20px] bg-[#2f384d] py-[22px] flex flex-wrap items-center justify-between text-[13px] font-bold z-0 relative">
+				<li class="js-sort js-sort-miasto w-[100px] uppercase text-[#8a8f99] cursor-pointer relative sort-arrow">miasto</li>
+				<li class="js-sort js-sort-inwestycja w-[170px] uppercase text-[#8a8f99] cursor-pointer sort-arrow relative">inwestycja</li>
+				<li class="js-sort js-sort-cena w-[100px] uppercase text-[#8a8f99] cursor-pointer sort-arrow relative">cena</li>
+				<li class="empty w-[0px]"></li>
+			</ul>
+
 			<!-- wp:query {"query":{"perPage":0,"pages":0,"offset":0,"postType":"miejsca-postojowe"},"isLink":true} -->
 				<!-- wp:post-template -->
 					<!-- wp:group {"isLink":false} -->
