--- a/assets/custom-styles.css
+++ b/assets/custom-styles.css
@@ -1054,13 +1054,13 @@ background-color: #e8fbff!important;
   border-bottom: 1px solid #b5b5b5;
   width: 100%;
 }
-.post-item {
-  padding: 0px 0px 0px 20px!important;
+.post-item-parking {
+  padding: 0px 20px 0px 20px!important;
   border: none;
   border-bottom: 1px solid #b5b5b5;
   width: 100%;
 }
-.post-item-parking > div > div > a::after{
+.post-item-parking > div > div > a:last-child:after{
   content: ' zł';
 }
 /* .ymc-smart-filter-container .container-posts .post-custom-layout .post-item p:nth-child(6) {
