--- a/templates/page-lista-miejsca-postojowe.html
+++ b/templates/page-lista-miejsca-postojowe.html
@@ -24,7 +24,7 @@
 					<div class="wp-block-group aos-fade-right  post-item post-item-parking">
 						<!-- wp:group -->
 						<div class="wp-block-group list-item-mieszkanie group container mx-auto w-full py-[20px] text-[16px] text-textGray flex justify-between items-center"> 
-							<!-- wp:post-terms {"term":"miasto"} /-->
+							<!-- wp:post-terms {"term":"miasto","isLink":false} /-->
 							<!-- wp:post-terms {"term":"inwestycja"} /-->
 							<!-- wp:post-terms {"term":"cena"} /-->
 						</div>
