--- a/templates/page-lista-miejsca-postojowe.html
+++ b/templates/page-lista-miejsca-postojowe.html
@@ -12,7 +12,7 @@
 			<div class="wp-block-group container mx-auto desktop:px-0 px-[20px] py-[80px]">
 			<!-- wp:post-content /-->
 
-			<ul class="wp-block-list container mx-auto all-taxonomy-list desktop:w-full w-[1054px] px-[20px] bg-[#2f384d] py-[22px] flex flex-wrap items-center justify-between text-[13px] font-bold z-0 relative">
+			<ul class="wp-block-list container mx-auto all-taxonomy-list w-full px-[20px] bg-[#2f384d] py-[22px] flex flex-wrap items-center justify-between text-[13px] font-bold z-0 relative">
 				<li class="uppercase text-[#8a8f99] relative after:content-['']">miasto</li>
 				<li class="uppercase text-[#8a8f99] relative after:content-['']">inwestycja</li>
 				<li class="uppercase text-[#8a8f99] relative after:content-['']">cena</li>
