--- a/templates/page-lista-miejsca-postojowe.html
+++ b/templates/page-lista-miejsca-postojowe.html
@@ -15,7 +15,7 @@
 			<ul class="wp-block-list container mx-auto all-taxonomy-list w-full px-[20px] bg-[#2f384d] py-[22px] flex flex-wrap items-center justify-between text-[13px] font-bold z-0 relative">
 				<li class="uppercase text-[#8a8f99] relative after:content-['']">miasto</li>
 				<li class="uppercase text-[#8a8f99] relative after:content-['']">inwestycja</li>
-				<li class="uppercase text-[#8a8f99] relative after:content-['']">cena</li>
+				<li class="w-[65px] uppercase text-[#8a8f99] relative after:content-['']">cena</li>
 			</ul>
 
 			<!-- wp:query {"query":{"perPage":0,"pages":0,"offset":0,"postType":"miejsca-postojowe"},"isLink":true} -->
