--- a/templates/page-lista-miejsca-postojowe.html
+++ b/templates/page-lista-miejsca-postojowe.html
@@ -13,7 +13,7 @@
 			<!-- wp:post-content /-->
 
 			<ul class="wp-block-list aos-fade-right container mx-auto all-taxonomy-list w-full px-[20px] bg-[#2f384d] py-[22px] flex flex-wrap items-center justify-between text-[13px] font-bold z-0 relative">
-				<div class="flex gap-[200px]">
+				<div class="flex gap-[20px] desktop:gap-[200px]">
 					<li class="uppercase text-[#8a8f99] relative after:content-['']">miasto</li>
 					<li class="uppercase text-[#8a8f99] relative after:content-['']">inwestycja</li>
 				</div>
@@ -26,8 +26,8 @@
 					<div class="wp-block-group aos-fade-right  post-item post-item-parking">
 						<!-- wp:group -->
 						<div class="wp-block-group list-item-mieszkanie group container mx-auto w-full py-[20px] text-[16px] text-textGray flex justify-between items-center"> 
-							<div class="flex gap-[200px]">
-								<!-- wp:post-terms {"term":"miasto","isLink":false} /-->
+							<div class="flex gap-[20px] desktop:gap-[200px]">
+								<!-- wp:post-terms {"term":"miasto"} /-->
 								<!-- wp:post-terms {"term":"inwestycja"} /-->
 							</div>
 							<!-- wp:post-terms {"term":"cena"} /-->
