--- a/templates/page-lista-miejsca-postojowe.html
+++ b/templates/page-lista-miejsca-postojowe.html
@@ -17,16 +17,28 @@
 				<!-- wp:group -->
 				<div class="wp-block-group flex gap-[20px] desktop:gap-[200px]">
 					<!-- wp:group -->
-					<div class="wp-block-group uppercase text-[#8a8f99] relative after:content-['']">miasto</div>
+					<div class="wp-block-group uppercase text-[#8a8f99] relative after:content-['']">
+						<!-- wp:paragraph -->
+						<p>miasto</p>
+						<!-- /wp:paragraph -->
+					</div>
 					<!-- /wp:group -->
 					<!-- wp:group -->
-					<div class="wp-block-group uppercase text-[#8a8f99] relative after:content-['']">inwestycja</div>
+					<div class="wp-block-group uppercase text-[#8a8f99] relative after:content-['']">
+						<!-- wp:paragraph -->
+						<p>inwestycja</p>
+						<!-- /wp:paragraph -->
+					</div>
 					<!-- /wp:group -->
 				</div>
 				<!-- /wp:group -->
 
 				<!-- wp:group -->
-				<div class="wp-block-group w-[65px] uppercase text-[#8a8f99] relative after:content-['']">cena</div>
+				<div class="wp-block-group w-[65px] uppercase text-[#8a8f99] relative after:content-['']">
+					<!-- wp:paragraph -->
+					<p>cena</p>
+					<!-- /wp:paragraph -->
+				</div>
 				<!-- /wp:group -->
 			</div>
 			<!-- /wp:group -->
