--- a/templates/page-inwestycje-zrealizowane.html
+++ b/templates/page-inwestycje-zrealizowane.html
@@ -46,7 +46,7 @@
 								<!-- /wp:group -->
 
 								<!-- wp:paragraph -->
-								<p class="relative inline flex gap-[8px] items-center text-primaryRed before:content-[''] before:inline-block cursor-pointer">Czytaj dalej<span class="text-[11px]">&#x25BA;</span>
+								<p class="mr-[8px] relative inline flex items-center text-primaryRed before:content-[''] before:inline-block cursor-pointer">Czytaj dalej<span class="text-[11px]">&#x25BA;</span>
 								</p>
 								<!-- /wp:paragraph -->
 							</div>
