--- a/templates/single-lokale.html
+++ b/templates/single-lokale.html
@@ -160,7 +160,7 @@
 								<!-- wp:group -->
 								<div class="wp-block-group group btn-find-more relative mb-[15px] bg-[#3d4b66] text-white w-full desktop:w-[230px] h-[55px] flex items-center justify-center border-b-[3px] border-b-[#2e384d] before:content-[''] before:inline-block before:absolute before:bottom-0 before:left-0 before:w-full before:min-h-[0%] hover:before:min-h-[100%] before:bg-[#2e384d] before:transition-height before:duration-300 before:ease cursor-pointer">
 									<!-- wp:paragraph -->
-									<p class="font-bold z-[1]"><a href="#cta2">Zapytaj o mieszkanie</a></p>
+									<p class="font-bold z-[1]"><a href="#cta2">Zapytaj o lokal</a></p>
 									<!-- /wp:paragraph -->
 								</div>
 								<!-- /wp:group -->
@@ -240,7 +240,7 @@
 				<!-- /wp:image -->
 
 				<!-- wp:paragraph -->
-				<span class="block text-[28px] text-center desktop:text-[36px] font-medium" data-aos="fade-right" data-aos-offset="30">Chcesz dowiedzieć się więcej o tym mieszkaniu?</span>
+				<span class="block text-[28px] text-center desktop:text-[36px] font-medium" data-aos="fade-right" data-aos-offset="30">Chcesz dowiedzieć się więcej o tym lokalu?</span>
 				<!-- /wp:paragraph -->
 				<!-- wp:paragraph -->
 				<span class="block text-[28px] text-center desktop:text-[36px] font-medium mb-[60px] desktop:mb-[40px]" data-aos="fade-right" data-aos-offset="30">Napisz!</span>
