--- a/templates/single-lokale.html
+++ b/templates/single-lokale.html
@@ -179,7 +179,7 @@
 						<!-- wp:group -->
 						<div class="wp-block-group apartment-info desktop:pl-[50px]">
 							<!-- wp:paragraph -->
-							<p class="mb-[50px] text-[24px]">Lokalizacja mieszkania na kondygnacji</p>
+							<p class="mb-[50px] text-[24px]">Lokalizacja lokalu na kondygnacji</p>
 							<!-- /wp:paragraph -->
 
 							<!-- wp:group -->
