--- a/templates/page-lista-miejsca-postojowe.html
+++ b/templates/page-lista-miejsca-postojowe.html
@@ -52,7 +52,9 @@
 							<!-- wp:group -->
 							<div class="wp-block-group flex gap-[20px] desktop:gap-[200px]">
 								<!-- wp:post-terms {"term":"miasto"} /-->
-								<!-- wp:post-terms {"term":"inwestycja"} /-->
+								<!-- _wp:post-terms {"term":"inwestycja"} /-->
+								<!-- wp:post-title /-->
+
 							</div>
 							<!-- /wp:group -->
 							<!-- wp:post-terms {"term":"cena"} /-->
