--- a/templates/page-lista-miejsca-postojowe.html
+++ b/templates/page-lista-miejsca-postojowe.html
@@ -53,7 +53,11 @@
 							<div class="wp-block-group flex gap-[20px] desktop:gap-[200px]">
 								<!-- wp:post-terms {"term":"miasto"} /-->
 								<!-- _wp:post-terms {"term":"inwestycja"} /-->
-								<!-- wp:post-title /-->
+								<!-- wp:group -->
+								<div class="wp-block-group text-[16px]">
+									<!-- wp:post-title /-->
+								</div>
+								<!-- /wp:group -->
 
 							</div>
 							<!-- /wp:group -->
