--- a/templates/page-lista-miejsca-postojowe.html
+++ b/templates/page-lista-miejsca-postojowe.html
@@ -54,8 +54,8 @@
 								<!-- wp:post-terms {"term":"miasto"} /-->
 								<!-- _wp:post-terms {"term":"inwestycja"} /-->
 								<!-- wp:group -->
-								<div class="wp-block-group text-[16px]">
-									<!-- wp:post-title /-->
+								<div class="wp-block-group !text-[16px]">
+									<!-- wp:post-title "className":"test" /-->
 								</div>
 								<!-- /wp:group -->
 
