--- a/templates/page-lista-miejsca-postojowe.html
+++ b/templates/page-lista-miejsca-postojowe.html
@@ -56,6 +56,7 @@
 								<!-- wp:group -->
 								<div class="wp-block-group !text-[16px]">
 									<!-- wp:post-title "className":"test" /-->
+									<!-- wp:post-title "level":"3" /-->
 								</div>
 								<!-- /wp:group -->
 
