--- a/templates/page-lista-miejsca-postojowe.html
+++ b/templates/page-lista-miejsca-postojowe.html
@@ -55,8 +55,8 @@
 								<!-- _wp:post-terms {"term":"inwestycja"} /-->
 								<!-- wp:group -->
 								<div class="wp-block-group !text-[16px]">
-									<!-- wp:post-title {"className":"test"} /-->
-									<!-- wp:post-title {"level":3} /-->
+									<!-- wp:post-title {"className":"text-[16px]"} /-->
+									<!-- wp:post-title {"level":6} /-->
 								</div>
 								<!-- /wp:group -->
 
