--- a/assets/custom-styles.css
+++ b/assets/custom-styles.css
@@ -629,8 +629,14 @@ label{
     border-right: 2px solid #ebeef2;
   }
   .ymc-smart-filter-container .filter-layout3 div.dropdown-filter:nth-child(13) > p {
-    /* padding-bottom: 0px!important; */
+    padding-bottom: 0px!important;
   }
+  @media only screen and (min-width: 1440px) {
+    .ymc-smart-filter-container .filter-layout3 div.dropdown-filter:nth-child(13) > p {
+      padding-bottom: 20px!important;
+    }
+  }
+
   .ymc-smart-filter-container .filter-layout3 div.dropdown-filter:nth-child(14) {
     border-right: 2px solid white;
   }
