--- a/templates/single-mieszkania.html
+++ b/templates/single-mieszkania.html
@@ -142,7 +142,7 @@
 							<!-- /wp:group -->
 
 							<!-- wp:group -->
-							<div class="wp-block-group right-col desktop:w-[40%] desktop:pl-[40px] desktop:pt-[50px] pt-0">
+							<div class="wp-block-group right-col desktop:w-[40%] desktop:pt-[50px] pt-0">
 								<!-- wp:paragraph -->
 								<p class="uppercase text-[10px] text-[#a1a7b2]">cena lokalu</p>
 								<!-- /wp:paragraph -->
