--- a/templates/single-mieszkania.html
+++ b/templates/single-mieszkania.html
@@ -165,12 +165,12 @@
 									</p>
 									<!-- /wp:paragraph -->
 									<!-- wp:paragraph -->
-									<p class="w-fit">
+									<p class="w-full">
 										<!-- wp:shortcode -->
 										[pdf_attachment file="1" name=" Pobierz kartę lokalu"]
 										<!-- /wp:shortcode -->
 									</p>
-									<!-- wp:paragraph -->
+									<!-- /wp:paragraph -->
 								</div>
 								<!-- /wp:group -->
 								<!-- wp:group -->
