--- a/templates/single-mieszkania.html
+++ b/templates/single-mieszkania.html
@@ -163,10 +163,11 @@
 									<p class="w-fit h-fit z-[1] pl-[10px]">
 										<svg class="w-[17px]" xmlns="http://www.w3.org/2000/svg" viewBox="0 0 36 36" class="injected-svg inject-svg"><path fill="transparent" d="M7 32V4h14.59L29 11.41V32H7z"></path><path fill="#2e384d" d="M21.17 5L28 11.83V31H8V5h13.17M22 3H6v30h24V11l-8-8z"></path><path fill="#2e384d" d="M29 13h-9V4h2v7h7v2z"></path></svg>
 									</p>
-									<!-- /wp:paragraph -->
-										<!-- wp:shortcode {"className":"test1"} -->
-										[pdf_attachment file="1" name=" Pobierz kartę lokalu"]
-										<!-- /wp:shortcode -->
+									<!-- /wp:paragraph  -->
+
+									<!-- wp:shortcode  -->
+									[pdf_attachment file="1" name=" Pobierz kartę lokalu"]
+									<!-- /wp:shortcode -->
 								</div>
 								<!-- /wp:group -->
 								<!-- wp:group -->
