--- a/assets/custom-styles.css
+++ b/assets/custom-styles.css
@@ -1182,6 +1182,7 @@ background-color: #e8fbff!important;
 }
 .pic{
   height: 100%!important;
+  width: fit-content!important;
   inset: 0!important;
 }
 .single .entry-content h4{
