--- a/templates/single-mieszkania.html
+++ b/templates/single-mieszkania.html
@@ -135,7 +135,7 @@
 						<!-- wp:group -->
 						<div class="wp-block-group two-col-layout desktop:mb-[30px] mb-[80px] desktop:flex justify-center">
 							<!-- wp:group -->
-							<div class="wp-block-group left-col desktop:w-[55%]">
+							<div class="wp-block-group left-col desktop:w-[55%] wide:w-[45%]">
 								<!-- wp:post-content /-->
 
 							</div>
