--- a/assets/custom-styles.css
+++ b/assets/custom-styles.css
@@ -1551,3 +1551,9 @@ background-color: #e8fbff!important;
   stroke-linejoin: round;
   stroke-miterlimit: 10;
 }
+
+/* All investments img */
+.term-investment-img > p > span > img{
+  width: 100%;
+  height: 100%;
+}
