--- a/assets/custom-styles.css
+++ b/assets/custom-styles.css
@@ -1553,7 +1553,9 @@ background-color: #e8fbff!important;
 }
 
 /* All investments img */
-.term-investment-img > p > span > img{
+.term_investment_img > p,
+.term_investment_img > p > picture,
+.term_investment_img > p > picture img{
   width: 100%;
   height: 100%;
 }
