--- a/assets/custom-styles.css
+++ b/assets/custom-styles.css
@@ -1559,3 +1559,7 @@ background-color: #e8fbff!important;
   width: 100%;
   height: 100%;
 }
+.term_investment_img > p > img{
+  width: 100%;
+  height: 100%;
+}
