--- a/templates/page-o-inwestycji-default.html
+++ b/templates/page-o-inwestycji-default.html
@@ -1,30 +1,15 @@
 <!-- wp:group -->
 <div id="PB Górski theme" class="wp-block-group overflow-x-hidden">
-	<!-- wp:list -->
-	<ul>
-		<!-- wp:list-item -->
-		<li>
-			<script>
-				AOS.init({
-					duration: 600,
-					easing: 'ease',
-					once: true
-				});
-			</script>
-		</li>
-		<!-- /wp:list-item -->
-	</ul>
-	<!-- /wp:list -->
-
 	<!-- wp:template-part {"slug":"front-page/header-white"} /-->
 
 	<!-- wp:group -->
 	<div id="main" class="wp-block-group ">
 		<!-- wp:group -->
 		<div id="Page content" class="wp-block-group page-content-wrapper" >
-      <!-- wp:pattern {"slug":"o-inwestycji-banner"} /-->
-      <!-- wp:pattern {"slug":"_o-inwestycji-search"} /-->
-      <!-- wp:pattern {"slug":"o-inwestycji-content"} /-->
+      <!-- wp:pattern {"slug":"o-inwestycji-default-banner"} /-->
+			<!-- wp:pattern {"slug":"searchbar-mieszkania"} /-->
+			<!-- wp:pattern {"slug":"o-inwestycji-wiezycka-folwark-search"} /-->
+      <!-- wp:pattern {"slug":"o-inwestycji-default-content"} /-->
 			<!-- wp:template-part {"slug":"front-page/cta"} /-->
 			<!-- wp:template-part {"slug":"front-page/newsletter"} /-->
 			<!-- wp:template-part {"slug":"front-page/footer"} /-->
