--- a/assets/custom-styles.css
+++ b/assets/custom-styles.css
@@ -1563,3 +1563,7 @@ background-color: #e8fbff!important;
   width: 100%;
   height: 100%;
 }
+
+.page-template-page-o-inwestycji-default .container-post-custom-layout{
+  display: none;
+}
