--- a/assets/editor.css
+++ b/assets/editor.css
@@ -23,7 +23,7 @@ figure div{
 }
 @media only screen and (min-width: 1024px){
     .editor-styles-wrapper #filter-layout3-filter-layout3 > .filter-entry {
-        height: 290!important;
+        height: 290px!important;
         position: relative;
         row-gap: 2px;
         transition: height .3s ease-out;
@@ -44,9 +44,9 @@ figure div{
 .ymc-filter-1850{
     height: 400px;
 }
-/* .filter-entry{
+.filter-entry{
     height: 290px!important;
-} */
+}
 .dropdown-filter,
 .btn-wrapper,
 .btn-search{
