--- a/assets/editor.css
+++ b/assets/editor.css
@@ -38,7 +38,7 @@ figure div{
   opacity:1!important;
   transition: opacity 0.3s ease;
 }
-.ymc-smart-filter-container .filter-layout3 div:nth-child(13){
+.ymc-smart-filter-container .filter-layout3 div:nth-child(13) .dropdown-filter-title{
     padding-bottom: 0px;
 }
 .inwestycje .container > div{
