--- a/assets/custom-styles.css
+++ b/assets/custom-styles.css
@@ -1564,6 +1564,7 @@ background-color: #e8fbff!important;
   height: 100%;
 }
 
-.page-template-page-o-inwestycji-default .container-post-custom-layout{
+.page-template-page-o-inwestycji-default .container-post-custom-layout,
+.page-template-default .container-post-custom-layout{
   display: none;
 }
