--- a/assets/custom-styles.css
+++ b/assets/custom-styles.css
@@ -12,6 +12,10 @@
   .apply-btn-more-hover {
     @apply before:content-[``] before:inline-block before:absolute before:bottom-0 before:left-0 before:w-full before:min-h-[0%] hover:before:min-h-[100%] before:bg-[#e1e1e1] before:transition-height before:duration-300 before:ease cursor-pointer;
   }
+  .hover_link_inwestycji {
+    @apply text-[#8a8f99] hover:text-textGray;
+  }
+  
 }
 
 /* general */
