--- a/assets/custom-styles.css
+++ b/assets/custom-styles.css
@@ -1569,7 +1569,7 @@ background-color: #e8fbff!important;
 .page-template-default .container-post-custom-layout{
   display: none;
 }
-.row-links p{
+/* .row-links p{
   color: #8a8f99;
 }
 .row-links p{
@@ -1578,4 +1578,4 @@ background-color: #e8fbff!important;
 }
 .row-links p:hover{
   color: #2E384D;
-}
+} */
