--- a/templates/page-galeria-default.html
+++ b/templates/page-galeria-default.html
@@ -7,8 +7,7 @@
 	<div id="main" class="wp-block-group ">
 		<!-- wp:group -->
 		<div id="Page content" class="wp-block-group page-content-wrapper" >
-      <!-- wp:pattern {"slug":"lista-mieszkan-osiedle-srebrniki-banner"} /-->
-      <!-- wp:pattern {"slug":"page-lista-mieszkan-osiedle-srebrniki-filtr"} /-->
+      <!-- wp:pattern {"slug":"page-galeria-default"} /-->
 			<!-- wp:template-part {"slug":"front-page/cta"} /-->
 			<!-- wp:template-part {"slug":"front-page/newsletter"} /-->
 			<!-- wp:template-part {"slug":"front-page/footer"} /-->
